--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ h1 {
   <input type="text" id="courseTitle"><br>
   <label>Course Code:</label>
   <input type="text" id="courseCode"><br>
-  <label>Faculty Name:</label>
+  <label>Department Name:</label>
   <input type="text" id="facultyName"><br>
   <label>Semester / Year:</label>
   <input type="text" id="semester"><br>
@@ -191,7 +191,7 @@ h1 {
   <div class="box"><b>Topic:</b> <span id="outTopic"></span></div>
   <div class="box"><b>Course Title:</b> <span id="outCourseTitle"></span></div>
   <div class="box"><b>Course Code:</b> <span id="outCourseCode"></span></div>
-  <div class="box"><b>Faculty Name:</b> <span id="outFaculty"></span></div>
+  <div class="box"><b>Department Name:</b> <span id="outDepartment"></span></div>
   <div class="box"><b>Semester / Year:</b> <span id="outSemester"></span></div>
 
   <div class="flex-row">
