--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ h1 {
   <div class="box"><b>Date of Submission:</b> <span id="outDate"></span></div>
 
   <div class="footer">
-    Made By Sayed Mohisin Chisty
+    Made By Sayed Mohosin Chisty
   </div>
 </div>
 
