--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 }
 
 .cover-page::before {
-  content: "Port City International\nUniversity"; 
+  content: "Port City International\nUniversity";
   position: absolute;
   font-family: 'LED Dot-Matrix', monospace;
   font-size: 40px;
@@ -118,10 +118,25 @@ h1 { text-decoration: underline; }
   position: relative;
 }
 
+/* Print settings */
 @media print {
-  body { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; margin: 0; padding: 0; background: none !important; }
+  body {
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+    margin: 0;
+    padding: 0;
+    background: none !important;
+  }
   .form-container { display: none !important; }
-  .cover-page { display: block !important; box-shadow: none; width: 794px; height: 1123px; margin: 0; page-break-before: always; background-size: cover !important; }
+  .cover-page {
+    display: block !important;
+    box-shadow: none;
+    width: 794px;
+    height: 1123px;
+    margin: 0;
+    page-break-before: always;
+    background-size: cover !important;
+  }
 }
 </style>
 </head>
@@ -139,18 +154,18 @@ h1 { text-decoration: underline; }
   <label>Submitted By (Student Name):</label><input type="text" id="studentName"><br>
   <label>Student ID:</label><input type="text" id="studentId"><br>
   <label>Department (Student):</label><input type="text" id="studentDept"><br>
-  <label>Date of Submission:</label><input type="date" id="submissionDate"><br><br>
-
-  <label>Optional Background Image:</label><input type="file" id="bgUpload" accept="image/*"><br>
-  <label>Optional Logo Image:</label><input type="file" id="logoUpload" accept="image/*"><br><br>
+  <label>Date of Submission:</label><input type="date" id="submissionDate"><br>
+  
+  <label>Upload Background (optional):</label><input type="file" id="bgUpload" accept="image/*"><br>
+  <label>Upload Logo (optional):</label><input type="file" id="logoUpload" accept="image/*"><br>
 
   <button onclick="generateCover()">Generate Cover Page</button>
-  <button onclick="downloadCover()">Download as JPG (Optional Images)</button>
+  <button onclick="downloadCoverPNG()">Download as PNG</button>
   <button onclick="window.print()">Save & Print</button>
 </div>
 
 <div class="cover-page" id="coverPage">
-  <img class="university-logo" id="uniLogo" src="https://raw.githubusercontent.com/mohosinchisty/Port-City-Assignment-Cover-page-/main/logo.png" alt="University Logo">
+  <img class="university-logo" id="coverLogo" src="https://raw.githubusercontent.com/mohosinchisty/Port-City-Assignment-Cover-page-/main/logo.png" alt="University Logo">
   <h2>Port City International University</h2>
   <h1>Assignment On</h1>
 
@@ -181,38 +196,47 @@ h1 { text-decoration: underline; }
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script>
 function generateCover() {
-  const fields = ['topic','courseTitle','courseCode','departmentName','semester','teacherName','teacherDept','studentName','studentId','studentDept','submissionDate'];
-  fields.forEach(f => {
-    const el = document.getElementById('out' + f.charAt(0).toUpperCase() + f.slice(1));
-    if(el) el.innerText = document.getElementById(f).value;
-  });
-  // Optional Background
-  const bgFile = document.getElementById('bgUpload').files[0];
-  if(bgFile) {
+  document.getElementById("outTopic").innerText = document.getElementById("topic").value;
+  document.getElementById("outCourseTitle").innerText = document.getElementById("courseTitle").value;
+  document.getElementById("outCourseCode").innerText = document.getElementById("courseCode").value;
+  document.getElementById("outDepartment").innerText = document.getElementById("departmentName").value;
+  document.getElementById("outSemester").innerText = document.getElementById("semester").value;
+  document.getElementById("outTeacherName").innerText = document.getElementById("teacherName").value;
+  document.getElementById("outTeacherDept").innerText = document.getElementById("teacherDept").value;
+  document.getElementById("outStudentName").innerText = document.getElementById("studentName").value;
+  document.getElementById("outStudentId").innerText = document.getElementById("studentId").value;
+  document.getElementById("outStudentDept").innerText = document.getElementById("studentDept").value;
+  document.getElementById("outDate").innerText = document.getElementById("submissionDate").value;
+
+  // Background upload
+  const bgFile = document.getElementById("bgUpload").files[0];
+  if(bgFile){
     const reader = new FileReader();
-    reader.onload = e => { document.getElementById('coverPage').style.backgroundImage = `url(${e.target.result})`; };
+    reader.onload = e => document.getElementById("coverPage").style.backgroundImage = `url(${e.target.result})`;
     reader.readAsDataURL(bgFile);
   }
-  // Optional Logo
-  const logoFile = document.getElementById('logoUpload').files[0];
-  if(logoFile) {
+
+  // Logo upload
+  const logoFile = document.getElementById("logoUpload").files[0];
+  if(logoFile){
     const reader = new FileReader();
-    reader.onload = e => { document.getElementById('uniLogo').src = e.target.result; };
+    reader.onload = e => document.getElementById("coverLogo").src = e.target.result;
     reader.readAsDataURL(logoFile);
   }
+
   document.getElementById("coverPage").style.display = "block";
 }
 
-function downloadCover() {
+function downloadCoverPNG() {
   const cover = document.getElementById("coverPage");
-  cover.style.display = "block"; // Ensure visible
   html2canvas(cover, {scale: 2}).then(canvas => {
     const link = document.createElement('a');
-    link.download = 'Assignment_Cover.jpg';
-    link.href = canvas.toDataURL('image/jpeg', 1.0);
+    link.download = 'cover-page.png';
+    link.href = canvas.toDataURL('image/png');
     link.click();
   });
 }
 </script>
+
 </body>
 </html>
