--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@ ul { padding-left:18px; margin-top:5px; margin-bottom:5px; }
 </div>
 
 <script>
-const jobOptions = [
+const jobOptions = 
   // Textile
   {title:"Textile Engineer", summary:"Highly motivated and detail-oriented Textile Engineer with [X] years of experience in textile manufacturing, quality control, and process optimization. Proficient in modern textile technologies, fabric production techniques, and machinery operation. Skilled in analyzing and improving production processes to enhance efficiency, reduce waste, and ensure high-quality fabric output. Adept at collaborating with cross-functional teams, managing projects, and implementing innovative solutions in both woven and knitted textiles. Committed to continuous learning and applying sustainable practices in textile production.",techSkills: ["Textile Testing", "Fabric Analysis", "Dyeing & Finishing Processes", "Textile Manufacturing Techniques", "CAD for Textiles (NedGraphics, TexPro)", "Machinery Operation & Maintenance", "Process Optimization", "Sustainable & Eco-friendly Textiles"]
 softSkills: ["Problem Solving", "Analytical Thinking", "Attention to Detail", "Project Management", "Team Coordination", "Communication Skills", "Time Management", "Adaptability", "Leadership"] , achievements:["Reduced production waste by 15%"], certifications:["Textile Diploma"], experience:[{title:"Textile Engineer",company:"ABC Textiles",start:"2022-01",end:"2023-08",current:false,responsibilities:["Supervised production line","Quality inspection"]}]},
@@ -254,11 +254,7 @@ softSkills: ["Problem Solving", "Analytical Thinking", "Attention to Detail", "P
         end: "2023-06",
         current: false,
         responsibilities: ["Handled inbound and outbound calls", "Assisted customers with inquiries and complaints", "Maintained accurate records in CRM", "Collaborated with team to meet performance targets"]
-      }
-    ]
-  }
-]
-
+      }]}
 // Populate title select
 const titleSelect = document.getElementById("titleSelect");
 jobOptions.forEach(job=>{
